Removed Set and Deque from SetList